// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AdBanner it should render properly with required props 1`] = `
<withRouter(OutboundLink)
  analyticsEventLabel="[AdBanner Hit] to www.test.com"
  className="adBannerLink"
  hasIcon={false}
  href="www.test.com"
>
  <div
    className="adBanner"
  >
    <div
      className="adBannerImageContainer"
    >
      <img
        alt="Some text"
        className="adBannerImage"
        src="www.imagetest.com"
      />
    </div>
    <h4
      className="adBannerText"
    >
      Test
    </h4>
  </div>
</withRouter(OutboundLink)>
`;

exports[`AdBanner should render properly with some props assigned 1`] = `
<withRouter(OutboundLink)
  analyticsEventLabel="[AdBanner Hit] to www.testMe.com"
  className="AdBanner-class adBannerLink"
  hasIcon={false}
  href="www.testMe.com"
>
  <div
    className="adBanner"
  >
    <div
      className="adBannerImageContainer"
    >
      <img
        alt="Alt text test"
        className="adBannerImage"
        src="test-image.jpg"
      />
    </div>
    <h4
      className="adBannerText"
    >
      Test
    </h4>
  </div>
</withRouter(OutboundLink)>
`;
